<resources>
    <string name="app_name">Cinebox</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="back">back</string>
    <string name="detail">Detail</string>
    <string name="genre">Genre</string>
    <string name="release_date">Release Date</string>
    <string name="popularity">Popularity</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>
    <string name="production_companies">Production Companies</string>
    <string name="poster">poster</string>
    <string name="now_playing">Now Playing</string>
    <string name="see_all">See All</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>
    <string name="favourite_movie">Favourite Movie</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="favorite_empty">Your Favorite Movie is still empty..</string>
    <string name="title_favourite">Favourite</string>
</resources>