<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.faltenreich.skeletonlayout.SkeletonLayout
        android:id="@+id/skeleton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="120dp"
                android:layout_height="165dp"
                android:layout_marginStart="24dp"
                android:elevation="12dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/poster"
                    android:scaleType="fitXY"
                    tools:src="@drawable/poster" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_title_popularity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card"
                app:layout_constraintTop_toTopOf="@id/card"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="Naruto The Last Movie" />

            <TextView
                android:id="@+id/tv_title_popularity"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/popularity"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/tv_title_release"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_title_release"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/release_date"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/tv_title_genre"
                app:layout_constraintEnd_toEndOf="@id/tv_title_popularity"
                app:layout_constraintStart_toStartOf="@id/tv_title_popularity"
                app:layout_constraintTop_toBottomOf="@id/tv_title_popularity" />

            <TextView
                android:id="@+id/tv_title_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/genre"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/card"
                app:layout_constraintEnd_toEndOf="@id/tv_title_popularity"
                app:layout_constraintStart_toStartOf="@id/tv_title_popularity"
                app:layout_constraintTop_toBottomOf="@id/tv_title_release" />


            <TextView
                android:id="@+id/tv_popularity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toEndOf="@id/tv_title_popularity"
                app:layout_constraintTop_toTopOf="@id/tv_title_popularity"
                tools:text="120000" />

            <TextView
                android:id="@+id/tv_release"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toEndOf="@id/tv_title_release"
                app:layout_constraintTop_toTopOf="@id/tv_title_release"
                tools:text="2014-07-21" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toEndOf="@id/tv_title_genre"
                app:layout_constraintTop_toTopOf="@id/tv_title_genre"
                tools:text="Anime, Fantasy, Sci-fi" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:dividerColor="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/card" />

            <TextView
                android:id="@+id/tv_rating"
                style="@style/poppinsMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/rating_bar"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider1"
                tools:text="8.9" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:isIndicator="false"
                android:numStars="5"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:stepSize="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_rating"
                app:layout_constraintTop_toTopOf="@id/tv_rating" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:dividerColor="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/tv_rating" />

            <TextView
                android:id="@+id/tv_overview_title"
                style="@style/poppinsMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/overview"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tv_overview_title"
                tools:text="Two years after the Fourth Shinobi World War, Naruto must stop Toneri Otsutsuki, a descendant of Hamura Otsutsuki, after Toneri causes the moon to descend toward Earth." />

            <TextView
                android:id="@+id/tv_cast_title"
                style="@style/poppinsMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/cast"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_overview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingTop="8dp"
                android:paddingEnd="24dp"
                android:paddingBottom="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_cast_title"
                tools:listitem="@layout/item_row_cast" />

            <TextView
                android:id="@+id/tv_company_title"
                style="@style/poppinsMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/production_companies"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_cast" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:paddingTop="8dp"
                android:paddingEnd="24dp"
                android:paddingBottom="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_company_title"
                tools:layout_editor_absoluteX="0dp"
                tools:listitem="@layout/item_row_production" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.faltenreich.skeletonlayout.SkeletonLayout>


</androidx.core.widget.NestedScrollView>